# test-repo

./: .env.example  .gitignore  README.md  config.example.yaml  index.html  pyproject.toml  requirements.txt
.kiro/steering/: 01-project-overview.md  02-api-unification-design.md
assets/: styles.css
docs/: codex-setup.md
js/: app.js  batch.js  components.js  settings.js  storage.js  utils.js
js/api/: deepseek.js  fal.js  gemini.js  index.js  openai.js  siliconflow.js  volcengine.js
js/api/protocols/: fal.js  gemini.js  openai.js
js/pages/: batch-page.js  change-bg.js  change-product.js  consistent.js  history.js  reverse.js  settings-page.js  workflow.js
photo2livephoto/: __init__.py  cli.py  i2v.py  livephoto.py
src/knowledge_capsule/: __init__.py  ai.py  config.py  db.py  extractor.py  mcp_server.py  models.py  service.py  web.py
