[project]
name = "knowledge-capsule"
version = "0.1.0"
description = "Personal knowledge capsule: capture, distill, and rediscover what you've learned across the web."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Knowledge Capsule" },
]
dependencies = [
    # MCP server (official SDK includes FastMCP under mcp.server.fastmcp)
    "mcp>=1.2.0",

    # Vector search in SQLite
    "sqlite-vec>=0.1.6",

    # OpenAI-compatible client (works for DeepSeek + SiliconFlow)
    "openai>=1.40.0",

    # Data models / settings
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",

    # Content extraction
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "readability-lxml>=0.8.1",

    # Phase 2 (web) - kept here so the same env covers both phases
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
knowledge-capsule-mcp = "knowledge_capsule.mcp_server:main"
knowledge-capsule-web = "knowledge_capsule.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_capsule"]
